5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1684_1872.log
== TEST (2019-04-28 18:13:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
elif((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y))	
-- ERROR:
File "XXXX", line 4
    elif((x==0)and(y==0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:13:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
elif((x==0)and(y==0)):
	print("Origem")
	
-- ERROR:
File "XXXX", line 4
    elif((x==0)and(y==0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:13:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
	
-- ERROR:
File "XXXX", line 4
    elif((x==0)and(y==0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:15:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)or(y==0)):
	print("Eixo")
	
-- ERROR:
File "XXXX", line 4
    elif((x==0)and(y==0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:15:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)or(y==0)):
	print("Eixo")
	
-- ERROR:
File "XXXX", line 4
    elif((x==0)and(y==0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:16:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)or(y!=0)):
	print("Eixo X")
	
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:17:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")	
	
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:20:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:20:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:20:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:20:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:20:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:20:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- EXECUTION TIME:
0.178573
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:21:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo X")
elif((x!=0)and(y==0)):
	print("Eixo Y")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:22:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("valor x: "))
y=float(input("valor y: "))
if((x==0)and(y==0)):
	print("Origem")
elif((x==0)and(y!=0)):
	print("Eixo Y")
elif((x!=0)and(y==0)):
	print("Eixo X")
elif((x>0)and(y>0)):
	print("Q1")	
elif((x<0)and(y>0)):
	print("Q2")
elif((x<0)and(y<0)):
	print("Q3")	
elif((x>0)and(y<0)):
	print("Q4")	
-- EXECUTION TIME:
0.186808
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
